added completion toggle

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <link data-trunk rel="rust" data-wasm-opt="z" />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+      .completed {
+        color: rgb(161 161 170);
+        text-decoration: line-through;
+      }
+    </style>
   </head>
 
   <body class="bg-slate-200 dark:bg-zinc-700 text-black dark:text-white"></body>
