--- a/index.html
+++ b/index.html
@@ -2,14 +2,9 @@
 <html>
   <head>
     <link data-trunk rel="rust" data-wasm-opt="z" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link data-trunk rel="css" href="/public/output.css" />
 
-    <style>
-      .completed {
-        color: rgb(161 161 170);
-        text-decoration: line-through;
-      }
-    </style>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
   <body class="bg-slate-200 dark:bg-zinc-700 text-black dark:text-white"></body>
